# Routine-organizer

./: .gitignore  Dockerfile  Makefile  README.md  TODO.txt  docker-compose.yml  pyproject.toml  requirements.txt
assets/css/: main.css
assets/js/: main.js
project/: models.py  urls.py  views.py
project/migrations/: 0001_initial.py  0002_task_caption.py
project/templates/: base.html  form.html  home.html  task.html  tasks.html  update.html
settings/: settings.py  urls.py
