[tool.poetry]
name = "routine organizer"
version = "0.1.0"
description = ""
authors = ["GuilhermeNunes <digobros13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.0"

[tool.taskipy.tasks]
run = "python manage.py runserver"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
